# pyxf86config

./: Makefile  README.md
src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  pyxf86conf.c  pyxf86conf.h  xf86ParserExt.h  xf86config_ext.c
